Revise partway through mediation section; spell check

--- a/draft.tex
+++ b/draft.tex
@@ -65,7 +65,7 @@ Barbara Walter identified disarmament as the ``critical barrier to civil war set
 
 Control of strategically valuable territory can pose similar challenges in both civil and interstate wars. Even if transferring control of the territory creates the best chance for peace, its transfer often involves a substantial risk that the territory will provide military advantage in a future conflict. 
 
-Following the 1992 war between Armenia and Azerbaijan over the disputed region of Ngorno-Karabakh, Armenia retained control of a significant amount of Azeribaijani territory that neither the Armenian government nor the Karabakh government viewed to be part of its homeland. Azerbaijan, however, valued control of the territory greatly as the home of Azeri residents and wished to govern the territory. Thus, it might have been efficient in the mid-1990s for the Armenian/Karabahk side to cede control of that territory to Azerbaijan as part of a deal in which Azeribaijan recognized Karabakh's independence.  However, that territory was strategically valuable, including territory on both sides of the Lachin Corridor, which connects Ngorno-Karabakh and Armenia. Azerbaijani control of the territory surrounding the corridor would empower Azerbaijan to seize military advantage in the future and cut off land travel between Ngorno-Karabakh and Armenia.  The territory was not conceded and the conflict persisted in costly stalemate for almost twenty years until war broke out anew in 2020. 
+Following the 1992 war between Armenia and Azerbaijan over the disputed region of Ngorno-Karabakh, Armenia retained control of a significant amount of Azeribaijani territory that neither the Armenian government nor the Karabakh government viewed to be part of its homeland. Azerbaijan, however, valued control of the territory greatly as the home of Azeri residents and wished to govern the territory. Thus, it might have been efficient in the mid-1990s for the Armenian/Karabahk side to cede control of that territory to Azerbaijan as part of a deal in which Azerbaijan recognized Karabakh's independence.  However, that territory was strategically valuable, including territory on both sides of the Lachin Corridor, which connects Ngorno-Karabakh and Armenia. Azerbaijani control of the territory surrounding the corridor would empower Azerbaijan to seize military advantage in the future and cut off land travel between Ngorno-Karabakh and Armenia.  The territory was not conceded and the conflict persisted in costly stalemate for almost twenty years until war broke out anew in 2020. 
 
 Walter (1997) observes empirically that, due to the difficulty of making efficient disarmament concessions, civil wars tend to end on the battlefield, rather than through negotiated settlement. Interstate wars over territory are similarly prone to violent, rather than negotiated, resolution (CITE). Can mediation offer a path to settlement in these challenging contexts? 
 
@@ -108,7 +108,7 @@ The basic model is a costly signaling model, at its root similar to ideas in Spe
 
 %In these and many other situations, a lack of trust is an impediment to peace, preventing parties from making necessary concessions. Mediation has long been understood as a mechanism for reducing mistrust, but in much of the published literature on international conflict mediation lacks a rigorous theoretical framework.
 
-This demonstration of the incentives for inefficient concessions leads to a new explanation for the role of mediators in conflict resolution. Third party involvement is ubiquitious in conflict and mediation has been extensively studied in the literature, but still the question of third party effectiveness is intensely debated.  Some authors have concluded that mediation has little impact, (Bercovitch 1996;  Bercovitch and Langley 1993; Fortna 2003) while others insist that a correct analysis finds mediation playing a positive role in resolving conflict (Dixon 1996; Beardsley et al. 2006).  But the term mediation encompasses a broad range of actions and interactions, making any one-size-fits-all conclusion on the efficacy of mediation difficult. The type of mediation affects the negotiation outcome (Bercovitch 2000; Beardsley et al. 2006) and timing is important (Greig 2005a).
+This demonstration of the incentives for inefficient concessions leads to a new explanation for the role of mediators in conflict resolution. Third party involvement is ubiquitous in conflict and mediation has been extensively studied in the literature, but still the question of third party effectiveness is intensely debated.  Some authors have concluded that mediation has little impact, (Bercovitch 1996;  Bercovitch and Langley 1993; Fortna 2003) while others insist that a correct analysis finds mediation playing a positive role in resolving conflict (Dixon 1996; Beardsley et al. 2006).  But the term mediation encompasses a broad range of actions and interactions, making any one-size-fits-all conclusion on the efficacy of mediation difficult. The type of mediation affects the negotiation outcome (Bercovitch 2000; Beardsley et al. 2006) and timing is important (Greig 2005a).
 
 It is essential to focus more precisely on the specific actions and environments that make use of particular types of mediation, which is how we approach the question. This paper models an environment where the primary issue is trust, not uncertainty about an opponent's capabilities, and where a mediator is employed who has manipulative abilities. Mediation rarely occurs in the absence of violent conflict (Bercovitch 1996; Beardsley 2006). In this paper, parties are in conflict and can benefit from seeking mediation in order to overcome mistrust. Parties are more likely to seek mediation when they are entrenched in costly conflict (Bercovitch and Jackson 2001; Greig 2005b; Greig and Diehl 2006; Terris and Maoz 2005; Svensson 2008). Alternatively, parties may seek a mediator to justify difficult concessions and avoid angering domestic constituencies (Allee and Huth 2006, Beardsley 2010).
 
@@ -121,7 +121,7 @@ These empirical results have until recently lacked strong theoretical foundation
 
 Countries\footnote{Players will be referred to as countries, though it could also be appropriate to think of players as intra-state actors, as in a civil war. } are of two possible types, high and low. A high type discounts future period payoffs at rate $\delta_h$ and a low type discounts at $\delta_l$ where $\delta_h >\delta_l$ and $\delta_h ,\delta_l$ $\in [0,1].$ Before the start of the game, nature independently determines the types of country 1 and country 2. The type distinction, as explained in detail later, encompasses the country's willingness to cooperate in solving the conflict; that is, throughout the analysis we will define a low type as a player whose only sequentially rational strategy is to remain in conflict in all periods. It is not necessary to think of a type as fixed; it can change as regimes and relations between countries change.\footnote{We can enrich the model to assign a probability (and even different probabilities) of a country's type shifting from high to low or low to high in a given period.}
 
- The probability of nature selecting the high type for a given country is $p$. The probability of nature selecting the low type is $1-p$.\footnote{Note that parameters are symmetric across countries, as is consistent with the literature. Qualititative results do not depend on this being the case, and equilibria and equilibrium concessions can easily be calculated with asymmetric parameters between players.}  Countries are aware of their own type, but not the type of the other country.  Similar scenarios have been modeled as credible commitment problems in the bargaining literature. Our model can be thought of as a reduced form bargaining model, but it can also be considered somewhat differently -- when trust is the issue to be solved, there are several solutions to conflict. Concessions are one way in which countries can signal their commitment.  By modeling the conflict in such a way we can also gain insight as to how a third party can ameliorate trust issues inherent to the conflict. %might want to cite fearon and bargaining lit here
+ The probability of nature selecting the high type for a given country is $p$. The probability of nature selecting the low type is $1-p$.\footnote{Note that parameters are symmetric across countries, as is consistent with the literature. Qualitative results do not depend on this being the case, and equilibria and equilibrium concessions can easily be calculated with asymmetric parameters between players.}  Countries are aware of their own type, but not the type of the other country.  Similar scenarios have been modeled as credible commitment problems in the bargaining literature. Our model can be thought of as a reduced form bargaining model, but it can also be considered somewhat differently -- when trust is the issue to be solved, there are several solutions to conflict. Concessions are one way in which countries can signal their commitment.  By modeling the conflict in such a way we can also gain insight as to how a third party can ameliorate trust issues inherent to the conflict. %might want to cite fearon and bargaining lit here
 %might want to eventually add the stochastic type switch- or at least talk about how that changes analysis
 
 In period 0, countries 1 and 2 simultaneously give costly concessions $g_i$ $\in \mathbb{R} \geq 0$, where $i\in\left\{1,2\right\}$. Concessions are given at cost $C(g_i)$ and are valued by the recipient in the amount $g_i$. For simplicity, we assume throughout that the cost of giving the gift is equal to the value to the recipient, that is $C(g_i)= g_i$.
@@ -152,7 +152,7 @@ We will use grim trigger punishments throughout: that is, (Fight, Fight) will be
 3) Country 1 plays Fight in round 1 while country 2 plays Trust, which is followed by both countries playing Fight from round 2 onwards and 
 4) Country 2 plays Fight in round 1 while country 1 plays Trust, which is followed by both countries playing Fight from round 2 onwards.
 
-Equilibrium payoffs beginning from round 1 are now easily described by noting only the collective first round behavior. Let $X_{ij}$ represent the sum of discounted payoffs for country $i$ where subscripts represent first round strategies of that country. If both countries play T in round 1, the corresponding payoff to country $i$ is represented as $ X_{TT}=\frac {T}{1- \delta_i}$. Likewise $X_{TF}=({-D}+\frac{\delta_i(W-D)}{1- \delta_i} )$, $ X_{FF}=\frac{W-D}{1- \delta_i}$, and  $X_{FT}=T+W +\frac{\delta_i(W-D)}{1- \delta_i}$. Note that because types have different discount rates, the payoffs differ by type, and when ambiguous will be superscripted to indicate the type (e.g. $X_{FT}^h$ represents payoffs for the high type of country 1 when country 1 fights and country 2 trusts in the first period). 
+Equilibrium payoffs beginning from round 1 are now easily described by noting only the collective first round behavior. Let $X_{ij}$ represent the sum of discounted payoffs for country $i$ where subscripts represent first round strategies of that country. If both countries play T in round 1, the corresponding payoff to country $i$ is represented as $ X_{TT}=\frac {T}{1- \delta_i}$. Likewise $X_{TF}=({-D}+\frac{\delta_i(W-D)}{1- \delta_i} )$, $ X_{FF}=\frac{W-D}{1- \delta_i}$, and  $X_{FT}=T+W +\frac{\delta_i(W-D)}{1- \delta_i}$. Note that because types have different discount rates, the payoffs differ by type, and when ambiguous will be super-scripted to indicate the type (e.g. $X_{FT}^h$ represents payoffs for the high type of country 1 when country 1 fights and country 2 trusts in the first period). 
 
 
 Parameters are common knowledge with the exception of $\delta_i$, which is country $i$'s private information. %Countries' utility is calculated as ex interim utility (Holmstrom and Myerson 1983),  i.e. when countries know their own type but not that of the other country. Depending on parameters, multiple equilibria are often possible. 
@@ -251,7 +251,7 @@ One example of such an equilibrium is Israel and Egypt at the Camp David Accords
 \subsection{Concessions with Material Value}
 We now model concessions to have real future material value that can either help or harm the giver. To be clear, in Sections~\ref{sec:model} and \ref{sec:bench}, the gift only benefits the party who receives it in the period in which it is received, that is, Period 0. In this section, we assume that this is an additional value from the gift in each period that the repeated game is played, that is, Period 1 and onward.
 
-The interpretation is that the country which receives the concessions can use them to build up their military or to build up their civil society. Using concessions to build military strength hurts the giver of the concessions in war; using the concessions to strengthen civil socity helps the giver in peace. The Golan heights is such an example: if Syria is an ally of Israel, the Golan Heights is a reasonable concession to make, but if Syria later turns out to betray a trust, surrender of the strategic land would be disastrous for Israel. %Another example is ADD more examples
+The interpretation is that the country which receives the concessions can use them to build up their military or to build up their civil society. Using concessions to build military strength hurts the giver of the concessions in war; using the concessions to strengthen civil society helps the giver in peace. The Golan heights is such an example: if Syria is an ally of Israel, the Golan Heights is a reasonable concession to make, but if Syria later turns out to betray a trust, surrender of the strategic land would be disastrous for Israel. %Another example is ADD more examples
 
 We add two elements to the benchmark model in Section 2 in order to incorporate future material value. The first is an additional decision for the negotiating parties. In Period 0, after receiving a concession, each country makes a decision about how to allocate the value of the concession between military and civil society. $\alpha_i$ is the portion of the received concession that country $i$ chooses to dedicate to civil society; $(1- \alpha_i$) is the portion country $i$ dedicates to military buildup. This decision is a simple optimization problem for each country. Parameters are common knowledge so the result of this decision is well known should the country's type be known.
 
@@ -269,9 +269,9 @@ Concessions are immediately converted into civil society or military gifts. They
 \end{center}
 \vskip.1in
 
-This modification to the payoffs is the second change in the model relative to Sections~\ref{sec:model} and \ref{sec:bench}. We add a term to each of $T$, $W$, and $D$ that represents the additional benefit or harm flowing from the future material value of the concession. When both countries play Trust, they each receive the base benefit $T$ as well as an additional benefit of the concession they \textit{gave} that is scaled by the proportion that was invested in civil socity as well as the base benefit of $T$.
+This modification to the payoffs is the second change in the model relative to Sections~\ref{sec:model} and \ref{sec:bench}. We add a term to each of $T$, $W$, and $D$ that represents the additional benefit or harm flowing from the future material value of the concession. When both countries play Trust, they each receive the base benefit $T$ as well as an additional benefit of the concession they \textit{gave} that is scaled by the proportion that was invested in civil society as well as the base benefit of $T$.
 
-If both countries play Fight, Country 1 (symmetric for Country 2) receives an additional benefit term $W(1-\alpha_1) g_2$, which accounts for the value of the received concession as well as how much Country 1 invested in the military. However, it also incurs extra damages $D(1-\alpha_2) g_1$ that are proportional to the size of the concession it \textit{gave} and how much of that concession was invested in the miliary by Country 2. The (Fight,Trust) and (Trust,Fight) payoffs are modified analogously.
+If both countries play Fight, Country 1 (symmetric for Country 2) receives an additional benefit term $W(1-\alpha_1) g_2$, which accounts for the value of the received concession as well as how much Country 1 invested in the military. However, it also incurs extra damages $D(1-\alpha_2) g_1$ that are proportional to the size of the concession it \textit{gave} and how much of that concession was invested in the military by Country 2. The (Fight,Trust) and (Trust,Fight) payoffs are modified analogously.
 
 Because $\al_i$ enters into the payoffs in a linear fashion, the choice that maximizes welfare is $\alpha=1$ for high types since a concession would only come from another high type in equilibrium, and thus only the ``Peace'' outcome will be played. Conversely, in equilibrium, low types only participate in the ``War'' equilibrium and thus maximize their payoffs by choosing $\alpha=0$. 
 
@@ -333,7 +333,7 @@ Before turning to the question of how the possibility of destroying the value of
 
 The intuition for Lemma~\ref{lemma:efficiency} is that future material value of concession helps you when your negotiating partner turns out to be a high type, and this happens $p$ of the time. On other other hand, the material value of your concession \emph{hurts} you when your negotiating partner turns out to be a low type. Similarly, the larger are the benefits from Trust, the larger the welfare gain when the negotiating partner is a high type, and the larger are the damages from Fight, the larger is the welfare loss when the negotiating partner turns out to be a low type.
 
-Lemma~\ref{lemma:efficiency} implies that the high types will either prefer $e=1$ or $e=0$. As we turn to our result about the incentive capatibility of the \emph{concessions separating equilibria with material value}, we focus on these two cases going forward as the most focal and easiest upon which to coordinate.\footnote{For some parameter values, we cannot rule out that a \emph{concessions separating equilibrium} with $0<e<1$ exists and improves upon high type welfare when high types are patient enough to separate when $e=0$ but not when $e=1$. This is not at all obvious though, especially because increasing $e$ from $0$ can tighten the high type's incentive constraint.} 
+Lemma~\ref{lemma:efficiency} implies that the high types will either prefer $e=1$ or $e=0$. As we turn to our result about the incentive compatibility of the \emph{concessions separating equilibria with material value}, we focus on these two cases going forward as the most focal and easiest upon which to coordinate.\footnote{For some parameter values, we cannot rule out that a \emph{concessions separating equilibrium} with $0<e<1$ exists and improves upon high type welfare when high types are patient enough to separate when $e=0$ but not when $e=1$. This is not at all obvious though, especially because increasing $e$ from $0$ can tighten the high type's incentive constraint.} 
 
 \begin{lemma}
 	The \emph{concessions separating equilibrium with efficient concessions} requires countries to be more patient than the \emph{concessions separating equilibrium with inefficient concessions}. 
@@ -355,7 +355,7 @@ Inefficient concessions are optimal under low $p$ (there's a good chance of faci
 
 \section{Mediation}
 \label{sec:med}
-All the results in this paper thus far have relied on bilateral engagement. We will now consider the involvement of a mediator. 
+All the results in this paper thus far have relied on bilateral engagement. We will now consider the involvement of a mediator when concessions have future material value that can benefit or harm the giver. 
 
 Because many conflicts occur in an international arena with no clear enforceable rule of law (Waltz 2002), much of the literature has focused on self-enforcing mechanisms. If however a credible third party exists, then results beyond self enforcing agreements can be relevant.  A mediator with such enforcement ability is said to use manipulative mediation, specifically if she ``offered to verify compliance with the agreement''  or ``took responsibility for concessions''  (Bercovitch 1997). We will now introduce a mediator who does the latter.\footnote{Here the parties' actions in the stage game as well as their choices of whether to spend concessions on the civil versus the military sector are assumed to derive from their type, so there is no need for the mediator to enforce these decisions once the type is revealed. Thus, we do not assume that the mediator can do either because it is not necessary.} 
 
@@ -363,7 +363,9 @@ The model setup is as before, but instead of parties being free to choose their 
 
 After learning their type, each country chooses to participate in the mechanism or not; that is, whether to send a message that declares its type to be High or Low. By the revelation principle, it is again without loss of generality to consider equilibria in which both countries participate and send truthful reports. Therefore we have a mechanism $M$ that inputs the reports $t_i \in \left\{High,Low\right\}$ for $i \in \left\{1,2\right\}$ and outputs the required concessions $g_i$ and efficiency levels $e_i$ so that $ M:(t_1,t_2)\rightarrow( e_1, g_1; e_2,g_2)$. The countries are bound to send the mandated concessions.
 
-In Sections~\ref{sec:bench} and \ref{sec:IC}, the same concession must be sent to both types since types are private information. Importantly, here the mechanism $M$ can differentiate based on recipient's type. Otherwise, the setup is the same as in Section~\ref{sec:matval} where concessions have future material value that can optionally be destroyed. As usual, truthful self-revelation requires that the individual rationality and incentive compatibility constraint for each type must be satisfied
+In Sections~\ref{sec:bench} and \ref{sec:IC}, the same concession must be sent to both types since types are private information. Importantly, here the mechanism $M$ can differentiate based on recipient's type. Otherwise, the setup is the same as in Section~\ref{sec:matval} where concessions have future material value that can optionally be destroyed. As usual, truthful self-revelation requires that the individual rationality and incentive compatibility constraint for each type must be satisfied.
+
+%The individual rationality constraints are satisfied for both types. The individual rationality constraint of the low types is satisfied because they have the same outcome as they do outside of the mechanism---that is, they remain in the `War' equilibrium and neither give nor receive concessions. For the high type, the constraint is looser. Outside of the mechanism, they would also remain in the `War' equilibrium and neither give nor receive concessions. If they participate, they receive the `War' payoffs with probability $(1-p)$ but they receive `Peace' payoffs with probability $p$. Because the `Peace' payoffs are higher than the `War' payoffs, this average is above their reservation payoffs. High types give and receive gifts of the same size
 
 \begin{lemma}
 	A manipulative mediator cannot facilitate the most efficient concessions---that is, $e=1$. 
@@ -371,7 +373,17 @@ In Sections~\ref{sec:bench} and \ref{sec:IC}, the same concession must be sent t
 \end{lemma}
 \emph{Proof}: See Appendix.
 
+In order to make the mechanism incentive compatible for the low types, some value of the concessions must be destroyed, i.e. $e<1$. The constraint that determines how efficient concessions can be comes from the low type incentive compatibility constraint. As in the concessions separating equilibria, this shows up in the optimal concession size.
 
+\begin{theorem}
+\emph{Mediation}
+\begin{enumerate}
+		\item[(a)] The mediation mechanism $M$ is incentive compatible when the specified concession is at least as large as $\frac{\left(1 - \de_l \right)\left(T +D \right)}{p - e\left(p +(1-\de_l)T -W \right)}$.
+		\item[(b)] In the best concessions separating equilibrium when gifts have full material value, high types give a concession of $\frac{\left(1-\de_l\right)p\left(D + T\right)}{\left(1-\de_l\right)\left(1 - pT \right) + (1-p) D}$, which is the smallest concession necessary to separate. Equilibria with higher concessions yield strictly lower payoffs.
+\end{enumerate}
+	\label{theorem:med}
+\end{theorem}
+\emph{Proof:} See Appendix.
 
 high type IC:
 $$pX_{TT}^h+(1-p)X_{FF}^h - pg_h +peg_h \geq X_{FF}^h $$
@@ -486,7 +498,7 @@ If the potential advantages of Peace are large enough to outweigh the risks of e
 
 \subsection{Concessions Separating Equilibrium}
 
-If the condition in Expression~\ref{eq:ncse} is not met, a separating equilibrium cannot be achieved with no concessionsin period 0.\footnote{Countries need to deliver concessions in period 0, not just promise them. A concession that is promised but not delivered will count as cheap talk.} If instead high-type negotiating parties have sufficient incentive to give a concession that reveals their type in period 0, the high types could safely play Trust in period 1, allowing two high types to avoid the trap of War that would occur under pooling. 
+If the condition in Expression~\ref{eq:ncse} is not met, a separating equilibrium cannot be achieved with no concessions-in period 0.\footnote{Countries need to deliver concessions in period 0, not just promise them. A concession that is promised but not delivered will count as cheap talk.} If instead high-type negotiating parties have sufficient incentive to give a concession that reveals their type in period 0, the high types could safely play Trust in period 1, allowing two high types to avoid the trap of War that would occur under pooling. 
 
 Below are the details of the \emph{concessions separating equilibrium} analysis. We refer to the equilibrium separating gifts as $g_h$ from the high type and $g_l$ from the low type. These equilibrium gifts will mean that when period 1 is reached, countries know which type the other country is and choose to play accordingly. The concessions phase acts as a coordination device to match countries' actions. To play different actions from each other is an off-equilibrium contingency. These off-equilibrium payoffs are nonetheless necessary for calculating the minimum separating concession. 
 \\
@@ -544,7 +556,7 @@ To show that the patience threshold for the \emph{no concessions separating equi
 $$T+D>W.$$
 We can multiply both sides by $(1-p)>0$ and then subtract $p(T+D)$ from both sides to get
 $$(T+D) > (1-p)W +p(T+D).$$
-Since $0<p<1$ and W,T, and D are all positive, both sides of the inequality are positve and so we can divide through by both and multiply both sides by $W$:
+Since $0<p<1$ and W,T, and D are all positive, both sides of the inequality are positive and so we can divide through by both and multiply both sides by $W$:
 $$\de_h^{nc} = \frac{W}{(1-p)W +p(T+D)} > \frac{W}{T+D} = \de_h^{c} $$
 
 In the case that both types of equilibria exist, i.e. $\de_h \geq \de_h^{nc}$, the high types will prefer the \emph{concessions separating equilibrium} if and only if
@@ -620,7 +632,7 @@ That is, there is no parameter restriction beyond our definition of what it mean
 \subsection{Material Value of Concessions can be Destroyed}
 \emph{Proof of Lemma~\ref{lemma:efficiency}:}\\
 %The benefit of a gift appears on both sides of the incentive compatibility constraint for both types and thus cancels out in the low type incentive compatibility constraint $(peg_h +X_{FF}^l \geq pX_{FT}^l+(1-p)X_{FF}^l-g_h+peg_h )$ and in the high type incentive compatibility constraint: $(pX_{TT}^h+(1-p)X_{FF}^h - g_h +peg_h \geq X_{FF}^h +peg_h)$. Therefore, receiving a gift where $e<1$  does not affect incentives to truth tell about the countries' types.
-The expected separation utility for the hight type under the game with material value that can be destroyed is
+The expected separation utility for the high type under the game with material value that can be destroyed is
 $$\frac{1}{1-\de_h}\left\{pT(1+eg^1) + (1-p)(W-D(1+eg^1))\right\} - (1-p)g^1$$
 The derivative with respect to $e$ is
 $$\frac{1}{1-\de_h}\left\{pTg^1 - (1-p)Dg^1)\right\}$$
@@ -650,12 +662,12 @@ Subtract $\frac{W}{T+D}$ from both sides to get
 	0 \geq \frac{-W(1-\de_l) + W\left(1-\de_l\right)-(D+T)\left(1-\de_l\right) - (W-(D+T))\left(1-\de_l\right)pT}{\left(1-\de_l\right)\left(D +	 T\right)} \\ 
 	+ \frac{(W-(D+T))(1-p) D + p(W-T)\left(1-\de_l\right)\left(D +	 T\right) + (1-p)D\left(1-\de_l\right)\left(D +	 T\right) + \left(1-\de_l\right)\left(D +	 T\right)}{\left(1-\de_l\right)\left(D +	 T\right)}
 \end{multline*}
-Cancelling the first two terms as well as the third and last terms, we have
+Canceling the first two terms as well as the third and last terms, we have
 \begin{multline*}
 	0 \geq \frac{- (W-(D+T))\left(1-\de_l\right)pT +(W-(D+T))(1-p) D }{\left(1-\de_l\right)\left(D +	 T\right)} \\ 
 	+ \frac{p(W-T)\left(1-\de_l\right)\left(D +	 T\right) + (1-p)D\left(1-\de_l\right)\left(D +	 T\right)}{\left(1-\de_l\right)\left(D +	 T\right)}
 \end{multline*}
-Expanding and cancelling out the terms with $pT$ as well as $(1-p)D\left(D +	 T\right)$, we have
+Expanding and canceling out the terms with $pT$ as well as $(1-p)D\left(D +	 T\right)$, we have
 %\begin{multline*}
 %	0 \geq \frac{-W\left(1-\de_l\right)pT +(W-(D+T))(1-p) D }{\left(1-\de_l\right)\left(D +	 T\right)} \\ 
 %	+ \frac{pW\left(1-\de_l\right)\left(D +	 T\right) + (1-p)D\left(1-\de_l\right)\left(D +	 T\right)}{\left(1-\de_l\right)\left(D +	 T\right)}
@@ -665,7 +677,7 @@ Expanding and cancelling out the terms with $pT$ as well as $(1-p)D\left(D +	 T\
 	0 \geq \frac{-W\left(1-\de_l\right)pT +W(1-p) D + pW\left(1-\de_l\right)\left(D +	 T\right) }{\left(1-\de_l\right)\left(D +	 T\right)} 
 	- \frac{\de_l (1-p)D\left(D +	 T\right)}{\left(1-\de_l\right)\left(D +	 T\right)}
 \end{equation*}
-Expanding once more and then cancelling out the $W\left(1-\de_l\right)pT$ and $pWD$ terms
+Expanding once more and then canceling out the $W\left(1-\de_l\right)pT$ and $pWD$ terms
 %\begin{equation*}
 %	0 \geq \frac{W(1-p) D + pW(1-\de_l)D}{\left(1-\de_l\right)\left(D +	 T\right)} 
 %	- \frac{\de_l (1-p)D\left(D +	 T\right)}{\left(1-\de_l\right)\left(D +	 T\right)}
@@ -719,20 +731,44 @@ There are no gifts on the left hand side and so the payoffs from Table 1 apply. 
 %			+ \de_l \left(W + \left(1-\al_1\right)Wg_2-D - \left(1-\al_2\right)Dg^M\right)
 %			\label{eq:lowICex}
 %		\end{multline}
-		\begin{equation*}
+		\begin{equation}
 			W-D \geq 
-			\left(1-\de_l\right) \left[T + Tg^M + W + Wg^M \right] + \de_l \left(W + Wg^M -D \right)
+			\left(1-\de_l\right) \left[T + Tg_h + W + Wg_h \right] + \de_l \left(W + Wg_h -D \right)
 			\label{eq:med}
-		\end{equation*}
-Cancelling like terms and rearranging, we have
+		\end{equation}
+Canceling like terms and rearranging, we have
 			\[
-					0 \geq \left(1 - \de_l \right) T + \left(1 - \de_l \right) Tg^M + Wg^M + \left(1 - \de_l \right) D
+					0 \geq \left(1 - \de_l \right) T + \left(1 - \de_l \right) Tg_h + Wg_h + \left(1 - \de_l \right) D
 			\]
-			Since we assume throughout that gifts must be non-negative, each of $T, W$ and $D$ are positive and $0 \leq \de_l \leq 1$, this inequality can never hold.	
+			Since we assume throughout that gifts must be non-negative, each of $T, W$ and $D$ are positive and $0 \leq \de_l \leq 1$, this inequality can never hold.	\hfill $\blacksquare$\\
+			\\
+\emph{Proof of Theorem~\ref{theorem:med}:}\\
+For the general form of the low type incentive compatibility constraint, we start from Expression~\ref{eq:med} and add back in the $e$'s that were removed when assuming $e=1$ in the proof of Theorem~\ref{theorem:med}. So we start from
+\begin{equation*}
+			W-D \geq 
+			\left(1-\de_l\right) \left[T + Teg_h + W + Weg_h \right] + \de_l \left(W + Weg_h -D \right) + peg_h - pg_h
+		\end{equation*}
+Simplifying, we have
+\[
+	pg_h\left(1 - e\right) \geq \left(T - \de_l T \right) \left(1 + eg_h\right) + Weg_h + \left(1 - \de_l \right) D
+\]
+Gathering the terms involving $g_h$ on the left hand side:
+\[
+	g_h\left[p\left(1 - e\right) -(1-\de_l)eT -eW \right] \geq \left(T - \de_l T \right) + \left(1 - \de_l \right) D
+\]
+Isolating $g_h$ on the left hand side and gathering terms, we have 
+\begin{equation}
+	g_h \geq \frac{\left(1 - \de_l \right)\left(T +D \right)}{p - e\left(p +(1-\de_l)T -W \right)} = g^M
+	\label{ex:med3}
+\end{equation}
+As before, the optimal gift is the one where Expression~\ref{ex:med3} holds with equality. We call this value $g^M$. We see here that $g^M$ depends on $e$, which is also the choice of the mediator \emph{and} that we must have $\overline{e} = p - e \left( p + T - \de_l T + W \right) > 0$ in order for the optimal concession to be both positive and finite. Both the optimal concession increases toward infinity as $e$ approaches $\frac{p}{p + \left(1-\de_l\right) + W}$, which is the value that makes the denominator of $g^M$ equal to 0.
 
-
-\hfill $\blacksquare$\\
-
+There are now two cases to consider. Depending on parameter values, welfare either increases toward infinity or decreases toward negative infinity as $e \rightarrow \overline{e}$. A sufficient condition In the welfare-maximizing mediation mechanism, the mediator sets $e$ to be as large as is feasible given the resources available to be given as concessions as long as $e < \frac{p}{p + \left(1-\de_l\right) + W}$ 
+					
+\[
+	\frac{e p T}{1 - \de_h} > 1
+\]
+										
 \newpage
 \section{Bibliography} %can add search(kaplan), expoeriments (2) and workplace gift exchange papers (the "gift giving as a medium" explanation
 
